[Enhancement #369] Support multilingual RDF containers in the OWL API driver.